--- a/TestSpringConcurrency/pom.xml
+++ b/TestSpringConcurrency/pom.xml
@@ -67,12 +67,26 @@
 			<artifactId>spring-jdbc</artifactId>
 			<version>5.0.8.RELEASE</version>
 		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/org.springframework/spring-test -->
+		<dependency>
+    		<groupId>org.springframework</groupId>
+    		<artifactId>spring-test</artifactId>
+    		<version>5.0.8.RELEASE</version>
+   			<scope>test</scope>
+		</dependency>
   		
 		<dependency>
     		<groupId>org.mockito</groupId>
     		<artifactId>mockito-all</artifactId>
     		<version>1.10.19</version>
     		<scope>test</scope>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/javax.inject/javax.inject -->
+		<dependency>
+    		<groupId>javax.inject</groupId>
+   			<artifactId>javax.inject</artifactId>
+    		<version>1</version>
 		</dependency>
   	</dependencies>
   
